add wallpaper provider meta data